# llm-wiki

./: .gitignore  .wiki_schema.md  README.md  ROADMAP.md  pyproject.toml
docs/superpowers/specs/: 2026-04-07-llm-wiki-phase1-design.md  2026-04-07-llm-wiki-phase2-query-design.md  2026-04-07-llm-wiki-phase3-lint-design.md
llm_wiki/: __main__.py  agent.py  cli.py  config.py  git.py  indexer.py  ingest.py  lint.py  llm.py  log.py  prompts.py  query.py  tools.py
src/: agent.py  cli.py  indexer.py  llm_client.py  tools_schema.py
