[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-wiki"
version = "0.1.0"
description = "LLM-powered personal knowledge base tool"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["rich"]

[project.scripts]
llm-wiki = "llm_wiki.cli:main"
